# getip

./: CMakeLists.txt  ParceSocket.cxx  ParceSocket.hxx  README.md  main.cxx
